# docz

./: README.md
backend/: pyproject.toml
backend/src/notebooklm_clone_backend/: __init__.py
docz_backend/: pyproject.toml
docz_backend/src/docz_backend/: __init__.py
docz_web/: package-lock.json  package.json
docz_web/src/routes/: +page.svelte
web/: package-lock.json  package.json
