[project]
name = "docz-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zhowzeng", email = "zenglihao106@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.127.0",
]

[project.scripts]
docz-backend = "docz_backend:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
